--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,22 @@ dependencies {
 	//implementation 'org.springframework.cloud:spring-cloud-function-context'
 
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
 	//testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'io.projectreactor:reactor-test'
+
+//	testImplementation("org.springframework.cloud:spring-cloud-stream") {
+//		artifact {
+//			name = "spring-cloud-stream"
+//			extension = "jar"
+//			type ="test-jar"
+//			classifier = "test-binder"
+//		}
+//	}
 }
 
 dependencyManagement {
