--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 ext {
+	set('otelVersion', "2.4.0")
 	set('springCloudVersion', "2024.0.0")
 }
 
@@ -30,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream'
 
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
