bootBuildImage 도커허브 등록 부분 제거

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,25 @@ dependencyManagement {
 	}
 }
 
+springBoot {
+	buildInfo()
+}
+
+bootBuildImage {
+	imageName = "${project.name}"
+	//publish = true
+	environment = ["BP_JVM_VERSION": "17"]
+	createdDate = "now"
+
+//	docker {
+//		publishRegistry {
+//			username = project.findProperty("registryUsername")
+//			password = project.findProperty("registryToken")
+//			url = project.findProperty("registryUrl")
+//		}
+//	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
