--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -46,3 +46,10 @@ spec:
               port: 9003
             initialDelaySeconds: 5
             periodSeconds: 15
+          volumeMounts:
+            - name: dispatcher-config-volume
+              mountPath: /workspace/config
+      volumes:
+        - name: dispatcher-config-volume
+          configMap:
+            name: polar-rabbitmq
