--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,10 @@ spring:
   application:
     name: dispatcher-service
   config:
-    import: "optional:configserver:"
+    import: "" #"optional:configserver:"
   cloud:
     config:
+      enabled: false
       uri: http://192.168.56.41:8888
       request-connect-timeout: 5000 # 5s
       request-read-timeout: 5000 # 5s
@@ -26,7 +27,6 @@ spring:
           group: ${spring.application.name}
         packlabel-out-0:
           destination: order-dispatched
-
   rabbitmq:
     host: localhost
     port: 5672
