--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -52,4 +52,4 @@ spec:
       volumes:
         - name: dispatcher-config-volume
           configMap:
-            name: polar-rabbitmq
+            name: dispatcher-config
