--- a/k8s/configmap.yml
+++ b/k8s/configmap.yml
@@ -8,4 +8,6 @@ data:
   application.yml: |
     spring:
       rabbitmq:
-        host: polar-rabbitmq
+        #host: polar-rabbitmq
+        host: 192.168.56.30
+        port: 30567
